# fork

./: .gitignore  README.md  pyproject.toml  skills-lock.json
issues/: prd.md
pipeline/common/: aliases.py  schemas.py
pipeline/stage1_parser/: attribution.py  chapters.py  endpoint.py  parser.py  resolve.py
pipeline/stage2_persona/: endpoint.py  parse_response.py  prompt.py
pipeline/stage3_embed/: embed.py  retrieval.py
pipeline/stage4_serve/: endpoint.py  forks.py  orchestrate.py  personas.py
pipeline/stage4_serve/personas/: harry_potter.json  hermione_granger.json  ron_weasley.json
tests/: test_aliases.py  test_stage1_parser.py  test_stage2_persona.py  test_stage3_retrieval.py  test_stage4_serve.py
